--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#" class="hire-btn">Hire Me</a>
         </div>
         <div class="right-side h-width">
-            <img src="./images/img2.png" alt="">
+            <img src="./images/my-bg.png" alt="">
         </div>
         
     </div>
