--- a/index.html
+++ b/index.html
@@ -21,7 +21,29 @@
         <div class="right-side h-width">
             <img src="./images/my-bg.png" alt="logo">
         </div>
-        
     </div>
+
+
+    <section class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1>Hello I'm come from another github profile</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="banner2">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1>Hello I'm come from another github profile</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
